<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2018 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
            android:id="@+id/my">
        <item
                android:id="@+id/profile_fragment"
                android:icon="@drawable/ic_menu_person"
                android:title="@string/profile"/>
        <item
                android:id="@+id/myrepos_fragment"
                android:icon="@drawable/ic_menu_repo"
                android:title="@string/my_repos"/>
        <item
                android:id="@+id/starred_fragment"
                android:icon="@drawable/ic_menu_star"
                android:title="@string/starred_repos"/>

        <item
                android:id="@+id/following_fragment"
                android:icon="@drawable/ic_menu_trace"
                android:title="@string/following"/>

        <!--<item
                android:id="@+id/followers_fragment"
                android:icon="@drawable/ic_menu_trace"
                android:title="@string/followers"/>-->
    </group>

    <group
            android:id="@+id/setting">
        <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/settings"/>
        <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/about"/>
        <!--<item
                android:id="@+id/nav_logout"
                android:checkable="false"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout"/>-->
    </group>

</menu>