<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2018 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/myrepos_fragment">

    <fragment
        android:id="@+id/profile_fragment"
        android:name="com.hqumath.androidmvvm.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile"/>

    <fragment
            android:id="@+id/myrepos_fragment"
            android:name="com.hqumath.androidmvvm.ui.myrepos.MyReposFragment"
            android:label="@string/my_repos"
            tools:layout="@layout/fragment_myrepos"/>

    <fragment
            android:id="@+id/starred_fragment"
            android:name="com.hqumath.androidmvvm.ui.starred.StarredFragment"
            android:label="@string/starred_repos"
            tools:layout="@layout/fragment_starred"/>

    <fragment
            android:id="@+id/following_fragment"
            android:name="com.hqumath.androidmvvm.ui.following.FollowingFragment"
            android:label="@string/following"
            tools:layout="@layout/fragment_following"/>
</navigation>